--- a/style.less
+++ b/style.less
@@ -34,8 +34,11 @@ body {
 			}
 		}
 
-		.dropped:hover .dropdown-level-2 {
-			display: block;
+		.dropped:hover {
+			background-color: #bbbbbb;
+			.dropdown-level-2 {
+				display: block;
+			}
 		}
 
 		.dropdown-level-2 {
